# metrics/api/clerk.go
@@ -3,16 +3,14 @@ package api
 const (
 	// Query API methods.
 
-	GetRecordCountMethod               = "GetRecordCount"
-	GetRecordListMethod                = "GetRecordList"
-	GetLatestRecordIdMethod            = "GetLatestRecordId"
-	GetRecordByIdMethod                = "GetRecordById"
-	GetRecordListWithTimeMethod        = "GetRecordListWithTime"
-	GetRecordSequenceMethod            = "GetRecordSequence"
-	IsClerkTxOldMethod                 = "IsClerkTxOld"
-	GetBlockHeightByTimeMethod         = "GetBlockHeightByTime"
-	GetRecordListVisibleAtHeightMethod = "GetRecordListVisibleAtHeight"
-	GetStateSyncsByTimeMethod          = "GetStateSyncsByTime"
+	GetRecordCountMethod        = "GetRecordCount"
+	GetRecordListMethod         = "GetRecordList"
+	GetLatestRecordIdMethod     = "GetLatestRecordId"
+	GetRecordByIdMethod         = "GetRecordById"
+	GetRecordListWithTimeMethod = "GetRecordListWithTime"
+	GetRecordSequenceMethod     = "GetRecordSequence"
+	IsClerkTxOldMethod          = "IsClerkTxOld"
+	GetStateSyncsByTimeMethod   = "GetStateSyncsByTime"
 
 	// Transaction API methods.
 
